--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="./assets/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <!-- Quelle: https://codepen.io/LoSti/pen/rNYGbJj/73a49ddc865ba3b86d00e9c38fb923be -->
 
     <style>
       .bd-placeholder-img {
@@ -70,6 +71,7 @@
               <p>Kommandowagen</p>
             </article>
           </a>
+          
           <a href="#!" class="wrapper__item">
             <img
               src="./assets/images/10-10-3_1.jpg"
