--- a/index.html
+++ b/index.html
@@ -8,267 +8,126 @@
 
     <!-- Bootstrap core CSS -->
     <link href="./assets/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <!-- Quelle: https://codepen.io/LoSti/pen/rNYGbJj/73a49ddc865ba3b86d00e9c38fb923be -->
 
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
+    <!--https://getbootstrap.com/docs/5.0/components/navs-tabs/-->
 
     <!-- Custom styles for this template -->
-    <link href="starter-template.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
     <section class="main containerWidth">
       <h1>Übersicht Fuhrpark</h1>
-      <div class="main__container">
-        <aside class="sidebar">
-          <ul class="sidebar__navigation">
-            <li class="sidebar__navigation-item active" data-car="10">
-              <button>Führungsfahrzeuge, Mannschaftstransport</button>
-            </li>
-            <li class="sidebar__navigation-item" data-car="20">
-              <button>Tanklöschfahrzeuge</button>
-            </li>
-            <li class="sidebar__navigation-item" data-car="30">
-              <button>Hubrettungs-, Wechsellader- und Kranfahrzeuge</button>
-            </li>
-            <li class="sidebar__navigation-item" data-car="40">
-              <button>Lösch-  und Tragkraftspritzenfahrzeuge</button>
-            </li>
-            <li class="sidebar__navigation-item" data-car="50">
-              <button>Gerätewagen, Schlauchwagen</button>
-            </li>
-            <li class="sidebar__navigation-item" data-car="60">
-              <button>Rüst- und Gerätewagen</button>
-            </li>
-            <li class="sidebar__navigation-item" data-car="90">
-              <button>Wasserrettung</button>
-            </li>
-          </ul>
-        </aside>
+      <div class="row d-flex align-items-start">
+        <!-- Table Headline Buttons -->
+        <ul class="col-lg-3 nav nav-fill nav-pills p-0" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+          <li class="nav-item d-grid" role="presentation">
+            <button class="nav-link active" id="v-pills-10-tab" data-bs-toggle="pill" data-bs-target="#v-pills-10" type="button" role="tab" aria-controls="v-pills-10" aria-selected="true">Führungsfahrzeuge, Mannschaftstransport</button>
+          </li>
+          <li class="nav-item d-grid" role="presentation">
+            <button class="nav-link" id="v-pills-20-tab" data-bs-toggle="pill" data-bs-target="#v-pills-20" type="button" role="tab" aria-controls="v-pills-20" aria-selected="false">Tanklöschfahrzeuge</button>
+          </li>
+          <li class="nav-item d-grid" role="presentation">
+            <button class="nav-link" id="v-pills-30-tab" data-bs-toggle="pill" data-bs-target="#v-pills-30" type="button" role="tab" aria-controls="v-pills-30" aria-selected="false">Hubrettungs-, Wechsellader- und Kranfahrzeuge</button>
+          </li>
+          <li class="nav-item d-grid" role="presentation">
+            <button class="nav-link" id="v-pills-40-tab" data-bs-toggle="pill" data-bs-target="#v-pills-40" type="button" role="tab" aria-controls="v-pills-40" aria-selected="false">Lösch- und Tragkraftspritzenfahrzeuge</button>
+          </li>
+          <li class="nav-item d-grid" role="presentation">
+            <button class="nav-link" id="v-pills-50-tab" data-bs-toggle="pill" data-bs-target="#v-pills-50" type="button" role="tab" aria-controls="v-pills-50" aria-selected="false">Gerätewagen, Schlauchwagen</button>
+          </li>
+          <li class="nav-item d-grid" role="presentation">
+            <button class="nav-link" id="v-pills-60-tab" data-bs-toggle="pill" data-bs-target="#v-pills-60" type="button" role="tab" aria-controls="v-pills-60" aria-selected="false">Rüst- und Gerätewagen</button>
+          </li>
+          <li class="nav-item d-grid" role="presentation">
+            <button class="nav-link" id="v-pills-90-tab" data-bs-toggle="pill" data-bs-target="#v-pills-90" type="button" role="tab" aria-controls="v-pills-90" aria-selected="false">Wasserrettung</button>
+          </li>
+        </ul>
 
-        <div class="wrapper active" data-car="10">
-          <a href="#!" class="wrapper__item">
-            <img
-              src="./assets/images/10-10-2.jpg"
-              alt="item"
-            />
-            <article>
-              <h2>KdoW - 10/10/2</h2>
-              <p>Kommandowagen</p>
-            </article>
-          </a>
-          
-          <a href="#!" class="wrapper__item">
-            <img
-              src="./assets/images/10-10-3_1.jpg"
-              alt="item"
-            />
-            <article>
-              <h2>KdoW - 10/10/2</h2>
-              <p>Kommandowagen</p>
-            </article>
-          </a>
-        </div>
+        <!-- Force next columns to break to new line -->
+        <div class="w-100 d-none"></div>
 
-        <div class="wrapper" data-car="20">
-          <a href="#!" class="wrapper__item">
-            <img
-              src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400"
-              alt="item"
-            />
-            <article>
-              <h2>KdoW - 10/10/2</h2>
-              <p>Kommandowagen</p>
-            </article>
-          </a>
-          <a href="#!" class="wrapper__item">
-            <img
-              src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400"
-              alt="item"
-            />
-            <article>
-              <h2>KdoW - 10/10/2</h2>
-              <p>Kommandowagen</p>
-            </article>
-          </a>
-          <a href="#!" class="wrapper__item">
-            <img
-              src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400"
-              alt="item"
-            />
-            <article>
-              <h2>KdoW - 10/10/2</h2>
-              <p>Kommandowagen</p>
-            </article>
-          </a>
-          <a href="#!" class="wrapper__item">
-            <img
-              src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400"
-              alt="item"
-            />
-            <article>
-              <h2>KdoW - 10/10/2</h2>
-              <p>Kommandowagen</p>
-            </article>
-          </a>
-          <a href="#!" class="wrapper__item">
-            <img
-              src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400"
-              alt="item"
-            />
-            <article>
-              <h2>KdoW - 10/10/2</h2>
-              <p>Kommandowagen</p>
-            </article>
-          </a>
-          <a href="#!" class="wrapper__item">
-            <img
-              src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400"
-              alt="item"
-            />
-            <article>
-              <h2>KdoW - 10/10/2</h2>
-              <p>Kommandowagen</p>
-            </article>
-          </a>
-          <a href="#!" class="wrapper__item">
-            <img
-              src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400"
-              alt="item"
-            />
-            <article>
-              <h2>KdoW - 10/10/2</h2>
-              <p>Kommandowagen</p>
-            </article>
-          </a>
-        </div>
-
-        <div class="wrapper" data-car="30">
-          <a href="#!" class="wrapper__item">
-            <img
-              src="https://images.unsplash.com/photo-1556086744-7502d61b1af5?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400"
-              alt="item"
-            />
-            <article>
-              <h2>KdoW - 10/10/2</h2>
-              <p>Kommandowagen</p>
-            </article>
-          </a>
-          <a href="#!" class="wrapper__item">
-            <img
-              src="https://images.unsplash.com/photo-1556086744-7502d61b1af5?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400"
-              alt="item"
-            />
-            <article>
-              <h2>KdoW - 10/10/2</h2>
-              <p>Kommandowagen</p>
-            </article>
-          </a>
-          <a href="#!" class="wrapper__item">
-            <img
-              src="https://images.unsplash.com/photo-1556086744-7502d61b1af5?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400"
-              alt="item"
-            />
-            <article>
-              <h2>KdoW - 10/10/2</h2>
-              <p>Kommandowagen</p>
-            </article>
-          </a>
-          <a href="#!" class="wrapper__item">
-            <img
-              src="https://images.unsplash.com/photo-1556086744-7502d61b1af5?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400"
-              alt="item"
-            />
-            <article>
-              <h2>KdoW - 10/10/2</h2>
-              <p>Kommandowagen</p>
-            </article>
-          </a>
-          <a href="#!" class="wrapper__item">
-            <img
-              src="https://images.unsplash.com/photo-1556086744-7502d61b1af5?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400"
-              alt="item"
-            />
-            <article>
-              <h2>KdoW - 10/10/2</h2>
-              <p>Kommandowagen</p>
-            </article>
-          </a>
-          <a href="#!" class="wrapper__item">
-            <img
-              src="https://images.unsplash.com/photo-1556086744-7502d61b1af5?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400"
-              alt="item"
-            />
-            <article>
-              <h2>KdoW - 10/10/2</h2>
-              <p>Kommandowagen</p>
-            </article>
-          </a>
-          <a href="#!" class="wrapper__item">
-            <img
-              src="https://images.unsplash.com/photo-1556086744-7502d61b1af5?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400"
-              alt="item"
-            />
-            <article>
-              <h2>KdoW - 10/10/2</h2>
-              <p>Kommandowagen</p>
-            </article>
-          </a>
+        <!-- Table Content -->
+        <div class="col-lg-9 tab-content" id="v-pills-tabContent">
+          <div class="tab-pane fade show active row justify-content-center" id="v-pills-10" role="tabpanel" aria-labelledby="v-pills-10-tab">
+            <div class="col-md-6">
+              <div class="wrapper__item">
+                <img src="./assets/images/10-10-2.jpg" alt="item" />
+                <article>
+                  <h2>KdoW - 10/10/2</h2>
+                  <p>Kommandowagen</p>
+                </article>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="wrapper__item">
+                <img src="./assets/images/10-10-3_1.jpg" alt="item" />
+                <article>
+                  <h2>KdoW - 10/10/2</h2>
+                  <p>Kommandowagen</p>
+                </article>
+              </div>
+            </div>
+          </div>
+          <div class="tab-pane fade" id="v-pills-20" role="tabpanel" aria-labelledby="v-pills-20-tab">
+            <a href="#!" class="wrapper__item"
+              ><img src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400" alt="item" />
+              <article>
+                <h2>KdoW - 10/10/2</h2>
+                <p>Kommandowagen</p>
+              </article>
+            </a>
+            <a href="#!" class="wrapper__item">
+              <img src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400" alt="item" />
+              <article>
+                <h2>KdoW - 10/10/2</h2>
+                <p>Kommandowagen</p>
+              </article>
+            </a>
+            <a href="#!" class="wrapper__item">
+              <img src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400" alt="item" />
+              <article>
+                <h2>KdoW - 10/10/2</h2>
+                <p>Kommandowagen</p>
+              </article>
+            </a>
+            <a href="#!" class="wrapper__item">
+              <img src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400" alt="item" />
+              <article>
+                <h2>KdoW - 10/10/2</h2>
+                <p>Kommandowagen</p>
+              </article>
+            </a>
+            <a href="#!" class="wrapper__item">
+              <img src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400" alt="item" />
+              <article>
+                <h2>KdoW - 10/10/2</h2>
+                <p>Kommandowagen</p>
+              </article>
+            </a>
+            <a href="#!" class="wrapper__item">
+              <img src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400" alt="item" />
+              <article>
+                <h2>KdoW - 10/10/2</h2>
+                <p>Kommandowagen</p>
+              </article>
+            </a>
+            <a href="#!" class="wrapper__item">
+              <img src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400" alt="item" />
+              <article>
+                <h2>KdoW - 10/10/2</h2>
+                <p>Kommandowagen</p>
+              </article>
+            </a>
+          </div>
+          <div class="tab-pane fade" id="v-pills-30" role="tabpanel" aria-labelledby="v-pills-30-tab">...30</div>
+          <div class="tab-pane fade" id="v-pills-40" role="tabpanel" aria-labelledby="v-pills-40-tab">...40</div>
+          <div class="tab-pane fade" id="v-pills-50" role="tabpanel" aria-labelledby="v-pills-50-tab">...50</div>
+          <div class="tab-pane fade" id="v-pills-60" role="tabpanel" aria-labelledby="v-pills-60-tab">...60</div>
+          <div class="tab-pane fade" id="v-pills-90" role="tabpanel" aria-labelledby="v-pills-90-tab">...90</div>
         </div>
       </div>
     </section>
 
     <script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      "use strict";
-
-      const carNav = document.querySelector(".sidebar__navigation");
-      const btns = document.querySelectorAll(".sidebar__navigation-item");
-      const carWrapper = document.querySelectorAll(".wrapper");
-
-      // CLICK ON NAVIGATION
-      carNav.addEventListener("click", ({ target }) => {
-        const btn = target;
-        const btnData = target.parentNode.dataset.car;
-        resetAll();
-        checkWrapper(btnData);
-      });
-
-      // REMOVE ALL ACTIVE CLASSES
-      function resetAll() {
-        carWrapper.forEach((wrapper) => wrapper.classList.remove("active"));
-        btns.forEach((btn) => btn.classList.remove("active"));
-      }
-
-      // ADD ACTIVE CLASSES
-      function checkWrapper(data) {
-        carWrapper.forEach((wrapper) => {
-          const wrapperData = wrapper.dataset.car;
-          if (wrapperData === data) {
-            wrapper.classList.add("active");
-          }
-        });
-
-        btns.forEach((btn) => {
-          if (btn.dataset.car === data) {
-            btn.classList.add("active");
-          }
-        });
-      }
-    </script>
   </body>
 </html>
