--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         <!-- Table Headline Buttons -->
         <ul class="col-lg-3 nav nav-fill nav-pills p-0" id="v-pills-tab" role="tablist" aria-orientation="vertical">
           <li class="nav-item d-grid" role="presentation">
-            <button class="nav-link active" id="v-pills-10-tab" data-bs-toggle="pill" data-bs-target="#v-pills-10" type="button" role="tab" aria-controls="v-pills-10" aria-selected="true">Führungsfahrzeuge, Mannschaftstransport</button>
+            <button class="nav-link active" id="v-pills-10-tab" data-bs-toggle="pill" data-bs-target="#v-pills-10" type="button" role="tab" aria-controls="v-pills-10" aria-selected="true">Führungs- und Transportwagen</button>
           </li>
           <li class="nav-item d-grid" role="presentation">
             <button class="nav-link" id="v-pills-20-tab" data-bs-toggle="pill" data-bs-target="#v-pills-20" type="button" role="tab" aria-controls="v-pills-20" aria-selected="false">Tanklöschfahrzeuge</button>
           </li>
           <li class="nav-item d-grid" role="presentation">
-            <button class="nav-link" id="v-pills-30-tab" data-bs-toggle="pill" data-bs-target="#v-pills-30" type="button" role="tab" aria-controls="v-pills-30" aria-selected="false">Hubrettungs-, Wechsellader- und Kranfahrzeuge</button>
+            <button class="nav-link" id="v-pills-30-tab" data-bs-toggle="pill" data-bs-target="#v-pills-30" type="button" role="tab" aria-controls="v-pills-30" aria-selected="false">Hubrettungs- und Kranfahrzeuge</button>
           </li>
           <li class="nav-item d-grid" role="presentation">
-            <button class="nav-link" id="v-pills-40-tab" data-bs-toggle="pill" data-bs-target="#v-pills-40" type="button" role="tab" aria-controls="v-pills-40" aria-selected="false">Lösch- und Tragkraftspritzenfahrzeuge</button>
+            <button class="nav-link" id="v-pills-40-tab" data-bs-toggle="pill" data-bs-target="#v-pills-40" type="button" role="tab" aria-controls="v-pills-40" aria-selected="false">Löschgruppenfahrzeuge</button>
           </li>
           <li class="nav-item d-grid" role="presentation">
-            <button class="nav-link" id="v-pills-50-tab" data-bs-toggle="pill" data-bs-target="#v-pills-50" type="button" role="tab" aria-controls="v-pills-50" aria-selected="false">Gerätewagen, Schlauchwagen</button>
+            <button class="nav-link" id="v-pills-50-tab" data-bs-toggle="pill" data-bs-target="#v-pills-50" type="button" role="tab" aria-controls="v-pills-50" aria-selected="false">Geräte- und Schlauchwagen</button>
           </li>
           <li class="nav-item d-grid" role="presentation">
             <button class="nav-link" id="v-pills-60-tab" data-bs-toggle="pill" data-bs-target="#v-pills-60" type="button" role="tab" aria-controls="v-pills-60" aria-selected="false">Rüst- und Gerätewagen</button>
@@ -49,7 +49,7 @@
         <!-- Table Content -->
         <div class="col-lg-9 tab-content" id="v-pills-tabContent">
           <div class="tab-pane fade show active" id="v-pills-10" role="tabpanel" aria-labelledby="v-pills-10-tab">
-            <div class="d-flex flex-wrap justify-content-between row row-cols-2">
+            <div class="d-flex flex-wrap justify-content-between row row-cols-1 row-cols-lg-2">
               <div class="col">
                 <div class="wrapper__item">
                   <img src="./assets/images/10-10-2.jpg" alt="item" />
@@ -71,7 +71,7 @@
             </div>
           </div>
           <div class="tab-pane fade" id="v-pills-20" role="tabpanel" aria-labelledby="v-pills-20-tab">
-            <div class="d-flex flex-wrap justify-content-between row row-cols-2">
+            <div class="d-flex flex-wrap justify-content-between row row-cols-1 row-cols-lg-2">
               <div class="col">
                 <div class="wrapper__item">
                   <img src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400" alt="item" />
@@ -138,7 +138,7 @@
             </div>
           </div>
           <div class="tab-pane fade" id="v-pills-30" role="tabpanel" aria-labelledby="v-pills-30-tab">
-            <div class="d-flex flex-wrap justify-content-between row row-cols-2">
+            <div class="d-flex flex-wrap justify-content-between row row-cols-1 row-cols-lg-2">
               <div class="col">
                 <div class="wrapper__item">
                   <img src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400" alt="item" />
@@ -205,7 +205,7 @@
             </div>
           </div>
           <div class="tab-pane fade" id="v-pills-40" role="tabpanel" aria-labelledby="v-pills-40-tab">
-            <div class="d-flex flex-wrap justify-content-between row row-cols-2">
+            <div class="d-flex flex-wrap justify-content-between row row-cols-1 row-cols-lg-2">
               <div class="col">
                 <div class="wrapper__item">
                   <img src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400" alt="item" />
@@ -272,7 +272,7 @@
             </div>
           </div>
           <div class="tab-pane fade" id="v-pills-50" role="tabpanel" aria-labelledby="v-pills-50-tab">
-            <div class="d-flex flex-wrap justify-content-between row row-cols-2">
+            <div class="d-flex flex-wrap justify-content-between row row-cols-1 row-cols-lg-2">
               <div class="col">
                 <div class="wrapper__item">
                   <img src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400" alt="item" />
@@ -339,7 +339,7 @@
             </div>
           </div>
           <div class="tab-pane fade" id="v-pills-60" role="tabpanel" aria-labelledby="v-pills-60-tab">
-            <div class="d-flex flex-wrap justify-content-between row row-cols-2">
+            <div class="d-flex flex-wrap justify-content-between row row-cols-1 row-cols-lg-2">
               <div class="col">
                 <div class="wrapper__item">
                   <img src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400" alt="item" />
@@ -406,7 +406,7 @@
             </div>
           </div>
           <div class="tab-pane fade" id="v-pills-90" role="tabpanel" aria-labelledby="v-pills-90-tab">
-            <div class="d-flex flex-wrap justify-content-between row row-cols-2">
+            <div class="d-flex flex-wrap justify-content-between row row-cols-1 row-cols-lg-2">
               <div class="col">
                 <div class="wrapper__item">
                   <img src="https://images.unsplash.com/photo-1555276533-a3f3b70c9159?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NDk0OTY3NQ&ixlib=rb-1.2.1&q=80&w=400" alt="item" />
