--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <!--https://getbootstrap.com/docs/5.0/components/navs-tabs/-->
 
     <!-- Custom styles for this template -->
-    <!--<link href="style.css" rel="stylesheet" />-->
     <link href="profilecard_style.css" rel="stylesheet" />
 
     <style>
@@ -69,7 +68,7 @@
         <!-- Table Content -->
         <div class="col-lg-9 tab-content" id="v-pills-tabContent">
           <div class="tab-pane fade show active" id="v-pills-10" role="tabpanel" aria-labelledby="v-pills-10-tab">
-            <div class="d-flex flex-wrap justify-content-between row row-cols-1 row-cols-lg-2">
+            <div class="row row-cols-1 row-cols-md-2 d-flex flex-wrap justify-content-between">
               <div class="col">
                 <div class="card">
                   <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_11_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="MZF - 1/11/1" data-mediabox-caption="Mehrzweckfahrzeug">
@@ -148,7 +147,7 @@
             </div>
           </div>
           <div class="tab-pane fade" id="v-pills-20" role="tabpanel" aria-labelledby="v-pills-20-tab">
-            <div class="d-flex flex-wrap justify-content-between row row-cols-1 row-cols-lg-2">
+            <div class="row row-cols-1 row-cols-md-2 d-flex flex-wrap justify-content-between">
               <div class="col">
                 <div class="card">
                   <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_11_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="MZF - 1/11/1" data-mediabox-caption="Mehrzweckfahrzeug">
@@ -227,7 +226,7 @@
             </div>
           </div>
           <div class="tab-pane fade" id="v-pills-30" role="tabpanel" aria-labelledby="v-pills-30-tab">
-            <div class="d-flex flex-wrap justify-content-between row row-cols-1 row-cols-lg-2">
+            <div class="row row-cols-1 row-cols-md-2 d-flex flex-wrap justify-content-between">
               <div class="col">
                 <div class="card">
                   <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_11_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="MZF - 1/11/1" data-mediabox-caption="Mehrzweckfahrzeug">
@@ -306,7 +305,7 @@
             </div>
           </div>
           <div class="tab-pane fade" id="v-pills-40" role="tabpanel" aria-labelledby="v-pills-40-tab">
-            <div class="d-flex flex-wrap justify-content-between row row-cols-1 row-cols-lg-2">
+            <div class="row row-cols-1 row-cols-md-2 d-flex flex-wrap justify-content-between">
               <div class="col">
                 <div class="card">
                   <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_11_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="MZF - 1/11/1" data-mediabox-caption="Mehrzweckfahrzeug">
@@ -385,7 +384,7 @@
             </div>
           </div>
           <div class="tab-pane fade" id="v-pills-50" role="tabpanel" aria-labelledby="v-pills-50-tab">
-            <div class="d-flex flex-wrap justify-content-between row row-cols-1 row-cols-lg-2">
+            <div class="row row-cols-1 row-cols-md-2 d-flex flex-wrap justify-content-between">
               <div class="col">
                 <div class="card">
                   <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_11_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="MZF - 1/11/1" data-mediabox-caption="Mehrzweckfahrzeug">
@@ -464,7 +463,7 @@
             </div>
           </div>
           <div class="tab-pane fade" id="v-pills-60" role="tabpanel" aria-labelledby="v-pills-60-tab">
-            <div class="d-flex flex-wrap justify-content-between row row-cols-1 row-cols-lg-2">
+            <div class="row row-cols-1 row-cols-md-2 d-flex flex-wrap justify-content-between">
               <div class="col">
                 <div class="card">
                   <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_11_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="MZF - 1/11/1" data-mediabox-caption="Mehrzweckfahrzeug">
@@ -543,7 +542,7 @@
             </div>
           </div>
           <div class="tab-pane fade" id="v-pills-90" role="tabpanel" aria-labelledby="v-pills-90-tab">
-            <div class="d-flex flex-wrap justify-content-between row row-cols-1 row-cols-lg-2">
+            <div class="row row-cols-1 row-cols-md-2 d-flex flex-wrap justify-content-between">
               <div class="col">
                 <div class="card">
                   <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_11_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="MZF - 1/11/1" data-mediabox-caption="Mehrzweckfahrzeug">
