adding department description to card example

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">MZF - 1/11/1</h5>
-                    <h6>(Mehrzweckfahrzeug)</h6>
+                    <h6>Mehrzweckfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -95,7 +95,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -110,7 +110,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -125,7 +125,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -140,7 +140,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -159,7 +159,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">MZF - 1/11/1</h5>
-                    <h6>(Mehrzweckfahrzeug)</h6>
+                    <h6>Mehrzweckfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -174,7 +174,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -189,7 +189,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -204,7 +204,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -219,7 +219,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -238,7 +238,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">MZF - 1/11/1</h5>
-                    <h6>(Mehrzweckfahrzeug)</h6>
+                    <h6>Mehrzweckfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -253,7 +253,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -268,7 +268,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -283,7 +283,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -298,7 +298,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -317,7 +317,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">MZF - 1/11/1</h5>
-                    <h6>(Mehrzweckfahrzeug)</h6>
+                    <h6>Mehrzweckfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -332,7 +332,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -347,7 +347,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -362,7 +362,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -377,7 +377,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -396,7 +396,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">MZF - 1/11/1</h5>
-                    <h6>(Mehrzweckfahrzeug)</h6>
+                    <h6>Mehrzweckfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -411,7 +411,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -426,7 +426,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -441,7 +441,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -456,7 +456,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -475,7 +475,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">MZF - 1/11/1</h5>
-                    <h6>(Mehrzweckfahrzeug)</h6>
+                    <h6>Mehrzweckfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -490,7 +490,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -505,7 +505,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -520,7 +520,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -535,7 +535,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -554,7 +554,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">MZF - 1/11/1</h5>
-                    <h6>(Mehrzweckfahrzeug)</h6>
+                    <h6>Mehrzweckfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -569,7 +569,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -584,7 +584,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -599,7 +599,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
@@ -614,7 +614,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
-                    <h6>(Tanklöschfahrzeug)</h6>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
                   </div>
                 </div>
               </div>
