--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!-- Table Headline Buttons -->
         <ul class="col-lg-3 nav nav-fill nav-pills p-0" id="v-pills-tab" role="tablist" aria-orientation="vertical">
           <li class="nav-item d-grid" role="presentation">
-            <button class="nav-link active" id="v-pills-10-tab" data-bs-toggle="pill" data-bs-target="#v-pills-10" type="button" role="tab" aria-controls="v-pills-10" aria-selected="true">Führungs- und Transportwagen</button>
+            <button class="nav-link active" id="v-pills-10-tab" data-bs-toggle="pill" data-bs-target="#v-pills-10" type="button" role="tab" aria-controls="v-pills-10" aria-selected="true">Führungs- und Mehrzweckfahrzeuge</button>
           </li>
           <li class="nav-item d-grid" role="presentation">
             <button class="nav-link" id="v-pills-20-tab" data-bs-toggle="pill" data-bs-target="#v-pills-20" type="button" role="tab" aria-controls="v-pills-20" aria-selected="false">Tanklöschfahrzeuge</button>
