--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </style>
   </head>
   <body>
-    <section class="main containerWidth">
+    <section class="main containerWidth fuhrpark_ffw_bamberg">
       <h1>Übersicht Fuhrpark</h1>
       <div class="row d-flex align-items-start">
         <!-- Table Headline Buttons -->
