cleaning css code snippets

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--https://getbootstrap.com/docs/5.0/components/navs-tabs/-->
 
     <!-- Custom styles for this template -->
-    <link href="profilecard_style.css" rel="stylesheet" />
+    <link href="ffwbg_custom_cards_style.css" rel="stylesheet" />
 
     <style>
       body {
