add sticky-top to the tab headlines

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         border-radius: 1rem;
         background-color: #fff;
       }
+
+      .sticky-top {
+        top: 186px;
+      }
     </style>
   </head>
   <body>
@@ -38,7 +42,7 @@
       <h1>Übersicht Fuhrpark</h1>
       <div class="row d-flex align-items-start">
         <!-- Table Headline Buttons -->
-        <ul class="col-lg-3 nav nav-fill nav-pills p-0" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+        <ul class="col-lg-3 nav nav-fill nav-pills p-0 sticky-top" id="v-pills-tab" role="tablist" aria-orientation="vertical">
           <li class="nav-item d-grid" role="presentation">
             <button class="nav-link active" id="v-pills-10-tab" data-bs-toggle="pill" data-bs-target="#v-pills-10" type="button" role="tab" aria-controls="v-pills-10" aria-selected="true">Führungs- und Mehrzweckfahrzeuge</button>
           </li>
@@ -69,6 +73,231 @@
         <div class="col-lg-9 tab-content" id="v-pills-tabContent">
           <div class="tab-pane show active" id="v-pills-10" role="tabpanel" aria-labelledby="v-pills-10-tab">
             <div class="row row-cols-1 row-cols-md-2 row-cols-xl-2 g-4 d-flex flex-wrap">
+              <div class="col">
+                <div class="card">
+                  <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_11_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="MZF - 1/11/1" data-mediabox-caption="Mehrzweckfahrzeug">
+                    <div class="image-wrapper bg-image img-hover-zoom">
+                      <img src="https://feuerwehr-bamberg.de/images/FFB/LG1/1_11_1.jpg" title="MZF - 1/11/1" class="card-img-top" loading="lazy" alt="..." style="margin: 0px; padding: 0px; float: none" />
+                    </div>
+                  </a>
+                  <!--Einsatzbericht anzeigen mit Plugin-Support-->
+
+                  <div class="card-body">
+                    <h5 class="card-title text-truncate">MZF - 1/11/1</h5>
+                    <h6>Mehrzweckfahrzeug - LG1</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="TLF 16/25 - 1/21/1" data-mediabox-caption="Tanklöschfahrzeug">
+                    <div class="image-wrapper bg-image img-hover-zoom">
+                      <img src="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" title="TLF 16/25 - 1/21/1" class="card-img-top" loading="lazy" alt="..." style="margin: 0px; padding: 0px; float: none" />
+                    </div>
+                  </a>
+                  <!--Einsatzbericht anzeigen mit Plugin-Support-->
+
+                  <div class="card-body">
+                    <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="TLF 16/25 - 1/21/1" data-mediabox-caption="Tanklöschfahrzeug">
+                    <div class="image-wrapper bg-image img-hover-zoom">
+                      <img src="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" title="TLF 16/25 - 1/21/1" class="card-img-top" loading="lazy" alt="..." style="margin: 0px; padding: 0px; float: none" />
+                    </div>
+                  </a>
+                  <!--Einsatzbericht anzeigen mit Plugin-Support-->
+
+                  <div class="card-body">
+                    <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="TLF 16/25 - 1/21/1" data-mediabox-caption="Tanklöschfahrzeug">
+                    <div class="image-wrapper bg-image img-hover-zoom">
+                      <img src="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" title="TLF 16/25 - 1/21/1" class="card-img-top" loading="lazy" alt="..." style="margin: 0px; padding: 0px; float: none" />
+                    </div>
+                  </a>
+                  <!--Einsatzbericht anzeigen mit Plugin-Support-->
+
+                  <div class="card-body">
+                    <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="TLF 16/25 - 1/21/1" data-mediabox-caption="Tanklöschfahrzeug">
+                    <div class="image-wrapper bg-image img-hover-zoom">
+                      <img src="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" title="TLF 16/25 - 1/21/1" class="card-img-top" loading="lazy" alt="..." style="margin: 0px; padding: 0px; float: none" />
+                    </div>
+                  </a>
+                  <!--Einsatzbericht anzeigen mit Plugin-Support-->
+
+                  <div class="card-body">
+                    <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_11_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="MZF - 1/11/1" data-mediabox-caption="Mehrzweckfahrzeug">
+                    <div class="image-wrapper bg-image img-hover-zoom">
+                      <img src="https://feuerwehr-bamberg.de/images/FFB/LG1/1_11_1.jpg" title="MZF - 1/11/1" class="card-img-top" loading="lazy" alt="..." style="margin: 0px; padding: 0px; float: none" />
+                    </div>
+                  </a>
+                  <!--Einsatzbericht anzeigen mit Plugin-Support-->
+
+                  <div class="card-body">
+                    <h5 class="card-title text-truncate">MZF - 1/11/1</h5>
+                    <h6>Mehrzweckfahrzeug - LG1</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="TLF 16/25 - 1/21/1" data-mediabox-caption="Tanklöschfahrzeug">
+                    <div class="image-wrapper bg-image img-hover-zoom">
+                      <img src="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" title="TLF 16/25 - 1/21/1" class="card-img-top" loading="lazy" alt="..." style="margin: 0px; padding: 0px; float: none" />
+                    </div>
+                  </a>
+                  <!--Einsatzbericht anzeigen mit Plugin-Support-->
+
+                  <div class="card-body">
+                    <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="TLF 16/25 - 1/21/1" data-mediabox-caption="Tanklöschfahrzeug">
+                    <div class="image-wrapper bg-image img-hover-zoom">
+                      <img src="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" title="TLF 16/25 - 1/21/1" class="card-img-top" loading="lazy" alt="..." style="margin: 0px; padding: 0px; float: none" />
+                    </div>
+                  </a>
+                  <!--Einsatzbericht anzeigen mit Plugin-Support-->
+
+                  <div class="card-body">
+                    <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="TLF 16/25 - 1/21/1" data-mediabox-caption="Tanklöschfahrzeug">
+                    <div class="image-wrapper bg-image img-hover-zoom">
+                      <img src="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" title="TLF 16/25 - 1/21/1" class="card-img-top" loading="lazy" alt="..." style="margin: 0px; padding: 0px; float: none" />
+                    </div>
+                  </a>
+                  <!--Einsatzbericht anzeigen mit Plugin-Support-->
+
+                  <div class="card-body">
+                    <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="TLF 16/25 - 1/21/1" data-mediabox-caption="Tanklöschfahrzeug">
+                    <div class="image-wrapper bg-image img-hover-zoom">
+                      <img src="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" title="TLF 16/25 - 1/21/1" class="card-img-top" loading="lazy" alt="..." style="margin: 0px; padding: 0px; float: none" />
+                    </div>
+                  </a>
+                  <!--Einsatzbericht anzeigen mit Plugin-Support-->
+
+                  <div class="card-body">
+                    <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_11_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="MZF - 1/11/1" data-mediabox-caption="Mehrzweckfahrzeug">
+                    <div class="image-wrapper bg-image img-hover-zoom">
+                      <img src="https://feuerwehr-bamberg.de/images/FFB/LG1/1_11_1.jpg" title="MZF - 1/11/1" class="card-img-top" loading="lazy" alt="..." style="margin: 0px; padding: 0px; float: none" />
+                    </div>
+                  </a>
+                  <!--Einsatzbericht anzeigen mit Plugin-Support-->
+
+                  <div class="card-body">
+                    <h5 class="card-title text-truncate">MZF - 1/11/1</h5>
+                    <h6>Mehrzweckfahrzeug - LG1</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="TLF 16/25 - 1/21/1" data-mediabox-caption="Tanklöschfahrzeug">
+                    <div class="image-wrapper bg-image img-hover-zoom">
+                      <img src="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" title="TLF 16/25 - 1/21/1" class="card-img-top" loading="lazy" alt="..." style="margin: 0px; padding: 0px; float: none" />
+                    </div>
+                  </a>
+                  <!--Einsatzbericht anzeigen mit Plugin-Support-->
+
+                  <div class="card-body">
+                    <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="TLF 16/25 - 1/21/1" data-mediabox-caption="Tanklöschfahrzeug">
+                    <div class="image-wrapper bg-image img-hover-zoom">
+                      <img src="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" title="TLF 16/25 - 1/21/1" class="card-img-top" loading="lazy" alt="..." style="margin: 0px; padding: 0px; float: none" />
+                    </div>
+                  </a>
+                  <!--Einsatzbericht anzeigen mit Plugin-Support-->
+
+                  <div class="card-body">
+                    <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="TLF 16/25 - 1/21/1" data-mediabox-caption="Tanklöschfahrzeug">
+                    <div class="image-wrapper bg-image img-hover-zoom">
+                      <img src="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" title="TLF 16/25 - 1/21/1" class="card-img-top" loading="lazy" alt="..." style="margin: 0px; padding: 0px; float: none" />
+                    </div>
+                  </a>
+                  <!--Einsatzbericht anzeigen mit Plugin-Support-->
+
+                  <div class="card-body">
+                    <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="TLF 16/25 - 1/21/1" data-mediabox-caption="Tanklöschfahrzeug">
+                    <div class="image-wrapper bg-image img-hover-zoom">
+                      <img src="https://feuerwehr-bamberg.de/images/FFB/LG1/1_21_1.jpg" title="TLF 16/25 - 1/21/1" class="card-img-top" loading="lazy" alt="..." style="margin: 0px; padding: 0px; float: none" />
+                    </div>
+                  </a>
+                  <!--Einsatzbericht anzeigen mit Plugin-Support-->
+
+                  <div class="card-body">
+                    <h5 class="card-title text-truncate">TLF 16/25 - 1/21/1</h5>
+                    <h6>Tanklöschfahrzeug - LG1</h6>
+                  </div>
+                </div>
+              </div>
               <div class="col">
                 <div class="card">
                   <a href="https://feuerwehr-bamberg.de/images/FFB/LG1/1_11_1.jpg" class="wfpopup wf-zoom-image" data-mediabox-group="LG1-FZ" data-mediabox-title="MZF - 1/11/1" data-mediabox-caption="Mehrzweckfahrzeug">
