some improvements and layout preview changes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       }
       .containerWidth {
         width: 100%;
-        max-width: 1128px;
+        max-width: 1088px;
         padding: 20px;
         margin-inline: auto;
         height: 100%;
@@ -33,7 +33,11 @@
       }
 
       .sticky-top {
-        top: 186px;
+        top: 110px;
+      }
+
+      #g-page-surround {
+        overflow: unset !important;
       }
     </style>
   </head>
