sticky-md-top media query fix

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         background-color: #fff;
       }
 
-      .sticky-top {
+      .sticky-lg-top {
         top: 110px;
       }
 
@@ -46,7 +46,7 @@
       <h1>Übersicht Fuhrpark</h1>
       <div class="row d-flex align-items-start">
         <!-- Table Headline Buttons -->
-        <ul class="col-lg-3 nav nav-fill nav-pills p-0 sticky-top" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+        <ul class="col-lg-3 nav nav-fill nav-pills p-0 sticky-lg-top" id="v-pills-tab" role="tablist" aria-orientation="vertical">
           <li class="nav-item d-grid" role="presentation">
             <button class="nav-link active" id="v-pills-10-tab" data-bs-toggle="pill" data-bs-target="#v-pills-10" type="button" role="tab" aria-controls="v-pills-10" aria-selected="true">Führungs- und Mehrzweckfahrzeuge</button>
           </li>
